RESOLVED FIXED182336
Invalidate style for sibling combinators accurately on class change
https://bugs.webkit.org/show_bug.cgi?id=182336
Summary Invalidate style for sibling combinators accurately on class change
Antti Koivisto
Reported 2018-01-31 09:02:34 PST
Use invalidation rulesets.
Attachments
patch (16.59 KB, patch)
2018-01-31 09:27 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2018-01-31 09:27:15 PST
WebKit Commit Bot
Comment 2 2018-02-01 01:01:06 PST
Comment on attachment 332768 [details] patch Clearing flags on attachment: 332768 Committed r227956: <https://trac.webkit.org/changeset/227956>
WebKit Commit Bot
Comment 3 2018-02-01 01:01:07 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-02-01 01:02:30 PST
Note You need to log in before you can comment on or make changes to this bug.